# preparsed-example

./: Readme.md
parse_at_target/: Cargo.toml
parse_at_target/src/: main.rs
preparse/: .gitignore  Cargo.toml
preparse/src/: main.rs
run_preparsed/: Cargo.toml
run_preparsed/src/: main.rs
shared/: Cargo.toml
shared/src/: host_functions.rs  lib.rs  state.rs
wasm_module/: Cargo.toml
wasm_module/.cargo/: config.toml
wasm_module/src/: host_functions.rs  lib.rs
