[package]
name = "parse_at_target"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
wasmi = { git = "https://github.com/FedorSmirnov89/wasmi.git", rev = "fae56e13f33a0cce6ef3a2be5bcfaa96f3671ae5", package = "wasmi", default-features = true }

shared = { path = "../shared" }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
