[package]
name = "run_preparsed"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
wasmi = { git = "https://github.com/FedorSmirnov89/wasmi.git", rev = "e25791d6ea442b53955b55cc392faa026952a210", package = "wasmi", default-features = false, features = [
    "deserialization",
] }
shared = { path = "../shared" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
