[package]
name = "run_preparsed"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
wasmi = { git = "https://github.com/FedorSmirnov89/wasmi.git", rev = "fae56e13f33a0cce6ef3a2be5bcfaa96f3671ae5", package = "wasmi", default-features = false, features = [
    "deserialization",
] }

shared = { path = "../shared" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
