[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
wasmi = { git = "https://github.com/FedorSmirnov89/wasmi.git", rev = "1957af0f9c2c9ad5e2860855a7b97a1582777f70", package = "wasmi", default-features = false }

anyhow = "1.0.99"
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
